src/objects/canl__c.object
<CustomObject>
    <description>This object is a master/detail to a Case Article Notification, and stores information about a single attached article.</description>
    <fields>
        <fullName>canlArticleKbNumber__c</fullName>
        <label>Article KB Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canlArticlePdfFileName__c</fullName>
        <label>Article PDF File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canlArticleTitle__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canlCaseArticleIdText__c</fullName>
        <label>Case Article ID Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canlCaseArticleNotification__c</fullName>
        <label>Case Article Notification</label>
        <referenceTo>can__c</referenceTo>
        <relationshipLabel>Case Article Notification Lines</relationshipLabel>
        <relationshipName>caseArticleNotificationLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Case Article Notification Line</label>
    <nameField>
        <displayFormat>CANL-{000000}</displayFormat>
        <label>Case Article Notification Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Article Notification Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>